--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,4 +1,15 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
-<p>prueba</p>
+<div class="gitposition-relative w-100">
+
+    <img class="w-100 img-fluid w-100"
+        src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg">
+    <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
+        <h1 class="display-2 bg-white fw-bold text-black  px-5 w-95 mx-4">
+            One Page Wonder
+        </h1>
+        <h1 class="display-5 bg-white fw-bold mt-3 text-black mx-4">
+            Will Knock Your Socks Off
+        </h1>
+    </div>
+</div>
