--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,5 @@
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-black w-100  ">
-
+<nav class="navbar navbar-expand-lg bg-black ">
+   <div class="container-fluid px-0">
         <a class="navbar-brand text-secondary" href="#">Start Boostrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,6 +21,5 @@
                 </li>
             </ul>
         </div>
-
-    </nav>
-</div>
+    </div>
+</nav>
