--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,7 +1,15 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<div class="height-30 d-inline-block">
+<div class="position-relative w-100 px-0">
 
-<img class="w-100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/03._Ciudad_de_Panama_de_noche..JPG/1200px-03._Ciudad_de_Panama_de_noche..JPG">
-    <h1 class="bg-white text-black">One page Wonder</h1>
+    <img class="w-100 img-fluid w-100"
+        src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg">
+    <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
+        <h1 class="display-2 bg-white fw-bold text-black  px-5 w-95 mx-4">
+            One Page Wonder
+        </h1>
+        <h1 class="display-5 bg-white fw-bold mt-3 text-black mx-4">
+            Will Knock Your Socks Off
+        </h1>
+    </div>
 </div>
