--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,3 +1,23 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
-Hola
+<!-- FIRST HEADING -->
+<div class="container py-5" style="border-bottom: 1px solid #e5e5e5;">
+    <div class="row align-items-center">
+
+        <!-- Texto izquierda -->
+        <div class="col-lg-8">
+            <h2 class="fw-bold">This First Heading <span class="text-muted">Will Catch Your Eye</span></h2>
+            <p>
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+                Fusce dapibus, tellus ac cursus commodo.
+            </p>
+        </div>
+
+        <!-- Imagen derecha -->
+        <div class="col-lg-4 text-center">
+            <img src="https://images.pexels.com/photos/4029925/pexels-photo-4029925.jpeg"
+                class="img-fluid rounded-circle" style="width: 300px; height: 300px; object-fit: cover;"
+                alt="section-1-image">
+        </div>
+    </div>
+</div>
