--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,62 @@
 <!-- your html code here -->
-<p>holas</p>
+<div class="container py-5">
+    <div class="row g-4">
+        <div class="col-md-4">
+            <div class="card h-100">
+                <div class="imgContainer">
+                    <img src="https://pm1.aminoapps.com/8634/f56c846337fc5b2f272cca43443d0f68e5f44a8cr1-560-477v2_hq.jpg"
+                        class="card-img-top" alt="minion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s content.</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card" style="width: 22rem;">
+                <div class="imgContainer">
+                    <img src="https://pm1.aminoapps.com/8634/f56c846337fc5b2f272cca43443d0f68e5f44a8cr1-560-477v2_hq.jpg"
+                        class="card-img-top " alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Tulepera con la papaya.</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s
+                        content.</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card" style="width: 22rem;">
+                <div class="imgContainer">
+                    <img src="https://ih1.redbubble.net/image.3126908423.9763/pp,504x498-pad,600x600,f8f8f8.u1.jpg"
+                        class="card-img-top " alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Durísimo.</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s
+                        content.</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card" style="width: 22rem;">
+                <div class="imgContainer">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJkcRfszZe-u49P-7iVMD6cG78LBc02A9Jrbe01MDrwR6GonVoNoq14dxUInNEj5n1NGs&usqp=CAU"
+                        class="card-img-top " alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Se cayó el portón.</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s
+                        content.</p>
+                </div>
+            </div>
+        </div> -->
+    </div>
+</div>
