--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,3 +1,33 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="container py-5" style="border-top: 1px solid #e5e5e5;">
+    <h2>Contacto.</h2>
+    <p>Utiliza el siguiente formulario para entrar en contacto con "Tulepera con la papaya" "Diavlo" o "Se cayó".
+        Gracias por la confianza amor y apoyo.</p>
 
+    <div class="container w-100 w-lg-75">
+        <div class="card bg-light bg-gradient">
+            <div class="card-body ">
+                <form>
+                    <div class="row mb-3">
+                        <label for="inputEmail3" class="col-sm-2 col-form-label fw-bold">Tu E-mail</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" placeholder="Tu email." id="inputEmail3" required>
+
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label for="floatingTextarea2" class="col-sm-2 col-form-label fw-bold">Mensaje</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" placeholder="Escribe tu mensaje..." id="floatingTextarea2"
+                                style="height: 100px"></textarea>
+                        </div>
+                        <div class="d-grid gap-1 d-md-flex justify-content-md-end mt-3">
+                            <button class="btn btn-primary me-md-2" type="submit">Enviar</button>
+
+                        </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+
+</div>
