portafolio terminado creo y ajuste pequeño a contact

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,6 +1,6 @@
 <div class="container py-5" style="border-top: 1px solid #e5e5e5;">
     <h2>Contacto.</h2>
-    <p>Utiliza el siguiente formulario para entrar en contacto con "Tulepera con la papaya" "Diavlo" o "Se cayó".
+    <p class="fs-5">Utiliza el siguiente formulario para entrar en contacto con "Tulepera con la papaya" "Diavlo" o "Se cayó".
         Gracias por la confianza amor y apoyo.</p>
 
     <div class="container w-100 w-lg-75">
