--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,5 +1,8 @@
-<!-- your html code here -->
+
+
 <div class="container py-5">
+    <h2>""Portafolio.""</h2>
+    <p class="fs-5">Sabemos que esta sección no contiene lo que realmente debería tener un portafolio pero es que no se me ocurrió una manera rápida de asociar el shitpost con un portafolios :V. Gracias. </p>
     <div class="row g-4">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -23,7 +26,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Diavlo</h5>
-                        <p class="card-text">yo viendo Js por primera vez luego de aprender HTML.</p>
+                        <p class="card-text">yo viendo Js por primera vez luego de aprender HTML. (esta imagen tiene un marco blanco, no es un fallo de encajado xd)</p>
                     </div>
 
                 </div>
