--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
         <div class="col-lg-12">
-            <p>Copyright &copy; Your Website Name 2021</p>
+            <p>Copyright &copy; Israel Quintero. / Manuel Francisco. / Jesús Pérez de la paz. / 2025.</p>
         </div>
     </div>
 </footer>
