--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -6,10 +6,9 @@
         src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg">
     <div class="position-absolute top-50 start-50 mt-5 translate-middle text-center w-100">
         <h1 class="display-2 bg-white fw-bold text-black  px-5 w-95 mx-4">
-            One Page Wonder
+            Ciudad de Panamá
         </h1>
         <h1 class="display-5 bg-white fw-bold mt-3 text-black mx-4">
-            Will Knock Your Socks Off
-        </h1>
+            Pty 507        </h1>
     </div>
 </div>
