--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<div class="position-relative w-100 px-0">
+<div class="position-relative w-100 px-0 espacio1">
 
     <img class="w-100 img-fluid w-100"
         src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg">
