--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -5,10 +5,10 @@
     <img class="gitposition-relative w-100 w-100 img-fluid w-100"
         src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg">
     <div class="position-absolute top-50 start-50 mt-5 translate-middle text-center w-100">
-        <h1 class="display-2 bg-white fw-bold text-black  px-5 w-95 mx-4">
+        <h1 style="--bs-bg-opacity: .5" class="display-2 bg-white  fw-bold text-black  px-5 w-95 mx-4">
             Ciudad de Panamá
         </h1>
-        <h1 class="display-5 bg-white fw-bold mt-3 text-black mx-4">
-            Pty 507        </h1>
+        <h1 style="--bs-bg-opacity: .5" class="display-5 bg-white fw-bold mt-3 text-black mx-4">
+            Pty 507 🇵🇦       </h1>
     </div>
 </div>
