--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -12,7 +12,7 @@
         <!-- Texto derecha -->
         <div class="col-lg-8">
             <h2 class="fw-bold">The Second Heading <span class="text-muted">Is Pretty Cool Too.</span></h2>
-            <p>
+            <p class="fs-5">
                 Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
                 euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur.
                 Fusce dapibus, tellus ac cursus commodo.
