--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -6,7 +6,7 @@
         <!-- Texto izquierda -->
         <div class="col-lg-8">
             <h2 class="fw-bold">This First Heading <span class="text-muted">Will Catch Your Eye</span></h2>
-            <p>
+            <p class="fs-5">
                 Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
                 euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur.
                 Fusce dapibus, tellus ac cursus commodo.
