--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<div class="gitposition-relative w-100">
+<!--<div class="gitposition-relative w-100 container-fluid ">
     
     <img class="gitposition-relative w-100 w-100 img-fluid w-100"
         src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg">
@@ -9,6 +9,18 @@
             Ciudad de Panamá
         </h1>
         <h1 style="--bs-bg-opacity: .5" class="display-5 bg-white fw-bold mt-3 text-black mx-4">
-            Pty 507 🇵🇦       </h1>
+                 </h1>
     </div>
 </div>
+
+<div class="row"><!--Tagline.html-->
+            <div class="col-12 mb-3 text-center">
+                <div class="row position-relative">
+                    <img src="https://media.gq.com.mx/photos/635c136db430aa98c0db8aee/16:9/w_2656,h_1494,c_limit/ciudad%20de%20panama-1204869339.jpg" alt="">
+                    <div style="margin-top: 75px;" class=" col-12 position-absolute top-50 start-50 translate-middle  fs-3 fw-bold">
+                        <h1 style="--bs-bg-opacity: .5" class="bg-light px-5 w-95 mx-4">Ciudad de Panamá</h1>
+                        <h2 style="--bs-bg-opacity: .5" class="bg-light px-5 w-95 mx-4"><strong>Pty 507 🇵🇦 </strong></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
