--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,12 +1,10 @@
 
-    <nav class="navbar navbar-expand-lg bg-black w-100  ">
-        
-
-        <a class="navbar-brand text-secondary" href="#">Start Boostrap</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    <nav class="navbar navbar-expand-lg bg-black w-100">
+        <a class="navbar-brand text-secondary ms-2" href="#">Start Boostrap</a>
+        <button class="navbar-toggler  bg-grey me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <i class="fa-solid fa-bars text-white"></i>
+      </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -23,5 +21,14 @@
                 </li>
             </ul>
         </div>
-
     </nav>
+
+
+
+
+
+
+
+
+
+
